# codeowner-gen

./: CODEOWNERS  Cargo.toml  Dockerfile  README.md  build.rs  codeowners.yaml
.github/workflows/: check-n-test.yaml  release.yaml
src/: clap_definition.yaml  main.rs
src/lib/: mod.rs
src/tests/: mod.rs  serialization.rs
