[package]
name = "codeowner-gen"
version = "0.1.5"
authors = ["Peter Grace <pete.grace@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
auditable = "0.1.0"
serde = { version = "1.0", features = ["derive"]}
anyhow = "1.0"
regex = "1.4"
lazy_static = "1.4"
serde_yaml = "0.8"
log = "0.4"
env_logger = "0.8"
clap = {version = "2", features = ["suggestions", "color", "yaml"]}

[build-dependencies]
auditable-build = "0.1.0"
